Localization,Junit,Exceptions,Threads,IO